--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
 }
 body{
-    
+  background: #040D1F;  
 }
 a{
     text-decoration: none;
@@ -185,7 +185,7 @@ input{
  align-items: center;
  gap: 30px;  
 }
-.intro__watch,.intro__download{
+.watch,.intro__download{
     width: 166px;
     height: 45px;
     border-radius: 4px;
@@ -195,7 +195,7 @@ input{
     
     
 }
-.intro__watch{
+.watch{
     background: var(--orange);
 }
 .intro__download{
@@ -266,9 +266,106 @@ input{
     line-height: 21px;
     color: var(--white);
 }
-    
 
+/* main section widow  */
+.widow{
+    height: 500px;
+    position: relative;
+    margin-top: 77px;
+}
+.widiw__bg{
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+}
+.widow-content{
+    background: linear-gradient(90deg, #DEF7FF 0%, #F4FCFF 45.64%, rgba(255, 255, 255, 0) 100.72%);
+    height: 100%;
+}
+.widow-content .container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.widow__image{
+    width: 445px;
+    margin-bottom: 50px;
+}
+.widow__text{
+    font-family: var(--rob);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    color: black;
+    margin-bottom: 55px;
+    width: 558px;
+    text-align: justify;
+}
 
+/* main section collection  */
+.collect__block{
+    display: flex;
+    justify-content: space-between;
+}
+.collect__box{
+    width: 350px;
+    position: relative;
+}
+.collect__bg{
+    width: 100%;
+    height: 100%;
+}
+.collect__content{
+    background: linear-gradient(270deg, rgba(7, 15, 25, 0.56) 0%, rgba(49, 114, 9, 0.56) 100%);
+    border-radius: 6px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px;
+}
+.collect__info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.collect__icon{
+    font-size: 46px;
+    color: var(--white);
+    margin-bottom: 15px;
+}
+.collect__title{
+    font-family: var(--com);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+    color: var(--white);
+}
+
+/* main section series  */
+
+.series__block{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(4,200px);
+    gap: 30px;
+}
+.series__box:nth-child(1){
+    grid-column: span 4;
+    grid-row: span 2;
+}
+.series__box:nth-child(2){
+    grid-column: span 2;
+    grid-row: span 2;
+}
 
 
 
