--- a/styles/media.css
+++ b/styles/media.css
@@ -6,7 +6,19 @@
     }
 }
 @media (max-width:992px) {
-    
+    .series__block{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(6, 200px);
+        
+    }
+    .series__box:nth-child(1){
+        grid-column: span 2;
+        grid-row: span 2;        
+    }
+    .series__box:nth-child(2){
+        grid-column: span 2;
+        grid-row: span 2;        
+    }
 }
 @media (max-width:768px) {
     .intro__title{
@@ -26,6 +38,19 @@
         width: 100%;
         margin-bottom: 15px;
     }
+    .series__block{
+        grid-template-columns: 1fr;
+        grid-template-rows: 400px auto;
+        
+    }
+    .series__box:nth-child(1){
+        grid-column: span 1;
+        grid-row: span 1;        
+    }
+    .series__box:nth-child(2){
+        grid-column: span 1;
+        grid-row: span 1;        
+    }
 }
 @media (max-width:576px) {
     .header__nav{
@@ -41,5 +66,16 @@
     }
     .intro__btn{
         gap: 10px;
+    }
+    
+    .series__title{
+        margin-bottom: 10px;
+        font-size: 25px;
+        line-height: 25px;
+    }
+    .series__text{
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 10px;
     }
 }
