--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,12 @@ input{
 .films__box{
     width: 255px;
     position: relative;
+    transition: .3s;
     
+}
+.films__box:hover{
+   transform: scale(1.1); 
+   
 }
 .films__bg{
     width: 100%;
@@ -313,6 +318,12 @@ input{
 .collect__box{
     width: 350px;
     position: relative;
+    overflow: hidden;
+    border-radius: 6px;
+}
+.collect__box:hover .collect__bg{
+    transform: scale(1.1);
+    transition: .3s;
 }
 .collect__bg{
     width: 100%;
@@ -358,6 +369,13 @@ input{
     grid-template-rows: repeat(4,200px);
     gap: 30px;
 }
+.series__box{
+    position: relative;
+}
+.series__box:hover i{
+    transform: rotateX(180deg);
+    transition: 3s;
+}
 .series__box:nth-child(1){
     grid-column: span 4;
     grid-row: span 2;
@@ -366,7 +384,78 @@ input{
     grid-column: span 2;
     grid-row: span 2;
 }
+.series__bg{
+ width: 100%;
+ height: 100%;   
+}
+.series-content{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(95.68deg, rgba(35, 35, 35, 0.8) 10.86%, rgba(11, 11, 11, 0.6) 110.86%);
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.series__title{
+    font-family: var(--com);
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 44px;
+    margin-bottom: 27px;
+    color: #fff;
+}
+.series__text{
+    font-family: var(--com);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    text-align: center;
+    width: 90%;
+    margin: 0 auto 30px;
+}
+.series__icon{
+    font-size: 48px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.series__box-title{
+    font-family: var(--com);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 27px;
+    color: #fff;
+}
 
+
+/* footer  */
+
+.footer{
+    background: #FF8C30;
+    margin-top: 60px;
+    padding: 24px 0;
+}
+.footer .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__play{
+    margin-right: 50px;
+}
+.footer__text{
+    font-family: var(--com);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    color: #fff;
+    letter-spacing: 1%;
+}
 
 
 
